<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_principal"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edit_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_titulo"
        android:padding="15dp"
        android:background="@color/white"
        android:maxLines="1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/edit_noticia"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/hint_escreva_a_noticia"
        android:padding="15dp"
        android:background="@color/white"
        android:inputType="textMultiLine"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/edit_data_noticia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_data"
        android:padding="15dp"
        android:background="@color/white"
        android:maxLines="1"
        android:maxLength="10"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/edit_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_autor"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/bt_publicar_noticia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_publicar"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="15dp"
        android:maxLines="1"
        android:backgroundTint="@color/teal_700"
        android:layout_margin="20dp"/>

</LinearLayout>
</ScrollView>